--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.15.1",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "webllm": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
