--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "three": "^0.160.0",
     "react-three-fiber": "^6.0.13",
     "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.12"
+    "@react-three/fiber": "^8.15.12",
+    "@react-three/postprocessing": "^2.15.11",
+    "postprocessing": "^6.33.4",
+    "lamina": "^1.1.23"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
