--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-three/fiber": "^8.15.12",
     "@react-three/postprocessing": "^2.15.11",
     "postprocessing": "^6.33.4",
-    "lamina": "^1.1.23"
+    "lamina": "1.1.23"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
