--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.20.1",
     "three": "^0.160.0",
     "react-three-fiber": "^6.0.13",
     "@react-three/drei": "^9.92.7",
