--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.1",
     "three": "^0.160.0",
-    "webllm": "^0.3.0"
+    "@mlc-ai/web-llm": "^0.2.46"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
