--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xenova/transformers": "^2.15.1",
-    "localforage": "^1.10.0",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "three": "^0.160.0",
-    "react-three-fiber": "^6.0.13",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "@react-three/postprocessing": "^2.15.11",
+    "@xenova/transformers": "^2.15.1",
+    "lamina": "1.1.23",
+    "localforage": "^1.10.0",
+    "lucide-react": "^0.344.0",
     "postprocessing": "^6.33.4",
-    "lamina": "1.1.23"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.20.1",
+    "three": "^0.160.0",
+    "@mlc-ai/web-llm": "^0.2.46"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
